tests/ui/coherence/indirect-impl-for-trait-obj-coherence.current.stderr
error[E0308]: mismatched types
  --> $DIR/indirect-impl-for-trait-obj-coherence.rs:23:41
   |
LL | fn transmute<T, U>(x: T) -> U {
   |              -  - expected type parameter
   |              |
   |              found type parameter
LL |     foo::<dyn Object<U, Output = T>, U>(x)
   |     ----------------------------------- ^ expected type parameter `U`, found type parameter `T`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected type parameter `U`
              found type parameter `T`
   = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
note: function defined here
  --> $DIR/indirect-impl-for-trait-obj-coherence.rs:17:4
   |
LL | fn foo<T: ?Sized, U>(x: <T as Object<U>>::Output) -> U {
   |    ^^^               ---------------------------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
